= Changelog of IDEasy

This file documents all notable changes to https://github.com/devonfw/IDEasy[IDEasy].

== 2025.12.001

* https://github.com/devonfw/IDEasy/issues/1166[#1166]: Automatic project import for IntelliJ
* https://github.com/devonfw/IDEasy/issues/1508[#1508]: xml merger fails when merging empty file

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/39[#39]: Implement ToolCommandlet for pip
* https://github.com/devonfw/IDEasy/issues/1633[#1633]: CVE suggestions show unstable versions
* https://github.com/devonfw/IDEasy/issues/1636[#1636]: CVE suggestion scoring more reasonable
* https://github.com/devonfw/IDEasy/issues/1640[#1640]: StackOverflowError: Infinity loop whilst installing terraform
* https://github.com/devonfw/IDEasy/issues/1645[#1645]: Fix for the NullPointerException while installing docker / kubectl

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/38?closed=1[milestone 2025.12.001].

== 2025.11.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1349[#1349]: Fix XML merge warning message to include file paths for better debugging
* https://github.com/devonfw/IDEasy/issues/1473[#1473]: option --skip-updates not working
* https://github.com/devonfw/IDEasy/issues/536[#536]: IDEasy complete tries to match commandlets twice
* https://github.com/devonfw/IDEasy/issues/1144[#1144]: CVE: adapt IDEasy to consider security.json files to warn user - see https://github.com/devonfw/IDEasy/blob/main/documentation/security.adoc[security] documentation
* https://github.com/devonfw/IDEasy/issues/1145[#1145]: CVE: suggest version update to user
* https://github.com/devonfw/IDEasy/issues/1510[#1510]: Make icd more usable
* https://github.com/devonfw/IDEasy/issues/1169[#1169]: mklink fails if link already exists
* https://github.com/devonfw/IDEasy/issues/1553[#1553]: IDEasy is slow since 2025.09.001