@@ -51,9 +51,9 @@ public class StatusCommandletTest extends AbstractIdeContextTest {
     status.run();
 
     // assert
-    assertThat(context).log().hasEntries(IdeLogEntry.ofWarning("You are offline because you have enabled offline mode via CLI option."),
-        IdeLogEntry.ofSuccess("Your version of IDEasy is SNAPSHOT."),
-        IdeLogEntry.ofWarning("Skipping check for newer version of IDEasy because you are offline."));
+    assertThat(context).log().hasEntries(IdeLogEntry.ofSuccess("Your version of IDEasy is SNAPSHOT."),
+        IdeLogEntry.ofWarning("Skipping check for newer version of IDEasy because you are offline."),
+        IdeLogEntry.ofWarning("You are offline because you have enabled offline mode via CLI option."));
   }
 
   /**
@@ -71,9 +71,9 @@ public class StatusCommandletTest extends AbstractIdeContextTest {
     status.run();
 
     // assert
-    assertThat(context).log().hasEntries(new IdeLogEntry(IdeLogLevel.ERROR, "You are offline because of the following error:", null, null, error, false),
-        IdeLogEntry.ofInteraction("Please check potential proxy settings, ensure you are properly connected to the internet and retry this operation."),
-        IdeLogEntry.ofWarning("Skipping check for newer version of IDEasy because you are offline."));
+    assertThat(context).log().hasEntries(IdeLogEntry.ofWarning("Skipping check for newer version of IDEasy because you are offline."),
+        new IdeLogEntry(IdeLogLevel.ERROR, "You are offline because of the following error:", null, null, error, false),
+        IdeLogEntry.ofInteraction("Please check potential proxy settings, ensure you are properly connected to the internet and retry this operation."));
   }
 
   /**
@@ -93,11 +93,11 @@ public class StatusCommandletTest extends AbstractIdeContextTest {
     status.run();
 
     // assert
-    assertThat(context).log().hasEntries(new IdeLogEntry(IdeLogLevel.ERROR, "You are offline because of the following error:", null, null, error, false),
+    assertThat(context).log().hasEntries(IdeLogEntry.ofWarning("Skipping check for newer version of IDEasy because you are offline."),
+        new IdeLogEntry(IdeLogLevel.ERROR, "You are offline because of the following error:", null, null, error, false),
         IdeLogEntry.ofWarning(
             "You are having TLS issues. We guess you are forced to use a VPN tool breaking end-to-end encryption causing this effect. As a workaround you can create and configure a truststore as described here:"),
-        IdeLogEntry.ofInteraction("https://github.com/devonfw/IDEasy/blob/main/documentation/proxy-support.adoc#tls-certificate-issues"),
-        IdeLogEntry.ofWarning("Skipping check for newer version of IDEasy because you are offline."));
+        IdeLogEntry.ofInteraction("https://github.com/devonfw/IDEasy/blob/main/documentation/proxy-support.adoc#tls-certificate-issues"));
   }
 
   /**
