@@ -1,0 +1,67 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<metadata modelVersion="1.1.0">
+  <groupId>com.devonfw.tools.IDEasy</groupId>
+  <artifactId>ide-cli</artifactId>
+  <versioning>
+    <lastUpdated>20251210073159</lastUpdated>
+    <snapshot>
+      <timestamp>20251208.024736</timestamp>
+      <buildNumber>3</buildNumber>
+    </snapshot>
+    <snapshotVersions>
+      <snapshotVersion>
+        <classifier>windows-x64</classifier>
+        <extension>msi</extension>
+        <value>2025.12.001-20251208.024736-3</value>
+        <updated>20251208024736</updated>
+      </snapshotVersion>
+      <snapshotVersion>
+        <classifier>mac-x64</classifier>
+        <extension>tar.gz</extension>
+        <value>2025.12.001-20251208.024736-3</value>
+        <updated>20251208024736</updated>
+      </snapshotVersion>
+      <snapshotVersion>
+        <classifier>mac-arm64</classifier>
+        <extension>tar.gz</extension>
+        <value>2025.12.001-20251208.024736-3</value>
+        <updated>20251208024736</updated>
+      </snapshotVersion>
+      <snapshotVersion>
+        <classifier>sources</classifier>
+        <extension>jar</extension>
+        <value>2025.12.001-20251208.024736-3</value>
+        <updated>20251208024736</updated>
+      </snapshotVersion>
+      <snapshotVersion>
+        <classifier>linux-x64</classifier>
+        <extension>tar.gz</extension>
+        <value>2025.12.001-20251208.024736-3</value>
+        <updated>20251208024736</updated>
+      </snapshotVersion>
+      <snapshotVersion>
+        <extension>jar</extension>
+        <value>2025.12.001-20251208.024736-3</value>
+        <updated>20251208024736</updated>
+      </snapshotVersion>
+      <snapshotVersion>
+        <classifier>javadoc</classifier>
+        <extension>jar</extension>
+        <value>2025.12.001-20251208.024736-3</value>
+        <updated>20251208024736</updated>
+      </snapshotVersion>
+      <snapshotVersion>
+        <classifier>windows-x64</classifier>
+        <extension>tar.gz</extension>
+        <value>2025.12.001-20251208.024736-3</value>
+        <updated>20251208024736</updated>
+      </snapshotVersion>
+      <snapshotVersion>
+        <extension>pom</extension>
+        <value>2025.12.001-20251208.024736-3</value>
+        <updated>20251208024736</updated>
+      </snapshotVersion>
+    </snapshotVersions>
+  </versioning>
+  <version>2025.12.001-SNAPSHOT</version>
+</metadata>
